--- a/index.html
+++ b/index.html
@@ -2,9 +2,97 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Al-E-Iba Dahri</title>
+  <title>Aleiba Asad</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: "Helvetica Neue", Arial, sans-serif;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      line-height: 1.6;
+      color: #333;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    header img {
+      width: 150px;
+      border-radius: 50%;
+      margin-bottom: 15px;
+    }
+    nav {
+      margin-bottom: 30px;
+      text-align: center;
+    }
+    nav a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #0073e6;
+    }
+    h1, h2 {
+      color: #222;
+    }
+    section {
+      margin-bottom: 40px;
+    }
+    a {
+      color: #0073e6;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello, I’m Al-E-Iba</h1>
+  <header>
+    <!-- Add your picture here later -->
+    <!-- <img src="your-photo.jpg" alt="Aleiba Asad"> -->
+    <h1>Aleiba Asad</h1>
+    <p>MSc Economics for Development, University of Oxford</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a> |
+    <a href="#research">Research</a> |
+    <a href="#projects">Projects</a> |
+    <a href="#cv">CV</a> |
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <h2>About</h2>
+    <p>
+      I am an economist with a background in development economics, applied microeconomics, and data-driven policy research. 
+      My interests lie in education, climate change, and poverty dynamics.
+    </p>
+  </section>
+
+  <section id="research">
+    <h2>Research</h2>
+    <ul>
+      <li><strong>Master’s Dissertation (Oxford):</strong> Impact of droughts on household assets and technology adoption in Ethiopia.</li>
+      <li>Ongoing interests: rural roads, education investments, and gender dynamics in household decision-making.</li>
+    </ul>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li>Data cleaning & analysis for RCTs (Blattman et al. 2014 replication work).</li>
+      <li>Panel data analysis on droughts, poverty traps, and Ethiopia’s PSNP.</li>
+    </ul>
+  </section>
+
+  <section id="cv">
+    <h2>CV</h2>
+    <p><a href="AleibaAsad_CV.pdf" target="_blank">Download my CV (PDF)</a></p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:aleiba.asad@email.com">aleiba.asad@email.com</a></p>
+    <p>GitHub: <a href="https://github.com/aleibad">github.com/aleibad</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
+  </section>
 </body>
 </html>
+
