--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Aleiba Asad</title>
+  <title>Al-E-Iba Dahri</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -61,24 +61,20 @@
   <section id="about">
     <h2>About</h2>
     <p>
-      I am an economist with a background in development economics, applied microeconomics, and data-driven policy research. 
-      My interests lie in education, climate change, and poverty dynamics.
+Development economics researcher specializing in quantitative analysis and data-driven policy work across climate, education, health, and gender issues.
     </p>
   </section>
 
   <section id="research">
     <h2>Research</h2>
     <ul>
-      <li><strong>Master’s Dissertation (Oxford):</strong> Impact of droughts on household assets and technology adoption in Ethiopia.</li>
-      <li>Ongoing interests: rural roads, education investments, and gender dynamics in household decision-making.</li>
+      <li><strong>Master’s Dissertation (Oxford):</strong> Climate Shocks, Repeated Exposure and Adaptation: Evidence from Ethiopia (Awarded a Distinction Mark).</li>
     </ul>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
     <ul>
-      <li>Data cleaning & analysis for RCTs (Blattman et al. 2014 replication work).</li>
-      <li>Panel data analysis on droughts, poverty traps, and Ethiopia’s PSNP.</li>
     </ul>
   </section>
 
@@ -90,7 +86,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:aleiba.asad@email.com">aleiba.asad@email.com</a></p>
-    <p>GitHub: <a href="https://github.com/aleibad">github.com/aleibad</a></p>
+    <p>GitHub: <a href="https://github.com/aleibaad">github.com/aleibad</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
   </section>
 </body>
