--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <header>
     <!-- Add your picture here later -->
     <!-- <img src="your-photo.jpg" alt="Aleiba Asad"> -->
-    <h1>Aleiba Asad</h1>
+    <h1>Al-E-Iba Dahri</h1>
     <p>MSc Economics for Development, University of Oxford</p>
   </header>
 
