--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
   <header>
     <!-- Add your picture here later -->
-    <!-- <img src="your-photo.jpg" alt="Aleiba Asad"> -->
+    <img src="profile.jpg" alt="Aleiba Asad">
     <h1>Al-E-Iba Dahri</h1>
     <p>MSc Economics for Development, University of Oxford</p>
   </header>
