--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       text-align: center;
       margin-bottom: 40px;
     }
-    header img {
-      width: 150px;
-      border-radius: 50%;
-      margin-bottom: 15px;
+   header img {
+    width: 150px;        /* adjust width */
+    height: auto;        /* keeps the aspect ratio */
+    margin-bottom: 15px;
     }
     nav {
       margin-bottom: 30px;
