--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ Development economics researcher specializing in quantitative analysis and data-
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:aleiba.asad@email.com">aleiba.asad@email.com</a></p>
-    <p>GitHub: <a href="https://github.com/aleibaad">github.com/aleibad</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
+    <p>Email: <a href="mailto:aleiba97@hotmail.com">aleiba97@hotmail.com</a></p>
+   <!--  <p>GitHub: <a href="https://github.com/aleibaad">github.com/aleibad</a></p> -->
+    <p>LinkedIn: <a href="https://linkedin.com/in/adahri">linkedin.com/in/yourprofile</a></p>
   </section>
 </body>
 </html>
