--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Development economics researcher specializing in quantitative analysis and data-
     <h2>Contact</h2>
     <p>Email: <a href="mailto:aleiba97@hotmail.com">aleiba97@hotmail.com</a></p>
    <!--  <p>GitHub: <a href="https://github.com/aleibaad">github.com/aleibad</a></p> -->
-    <p>LinkedIn: <a href="https://linkedin.com/in/adahri">linkedin.com/in/yourprofile</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/adahri">linkedin.com/in/adahri</a></p>
   </section>
 </body>
 </html>
