--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="about">
     <h2>About</h2>
     <p>
-Development economics researcher specializing in quantitative analysis and data-driven policy work across climate, education, health, and gender issues.
+Development economics professional specializing in quantitative analysis and data-driven policy work across climate, education, health, and gender issues.
     </p>
   </section>
 
