--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
         }
         
         header p {
-            color: rgba(255, 255, 255, 0.85);
-            font-style: italic;
-            font-size: 1.15em;
-            margin-top: 10px;
+        color: #001f3f; /* Darker, complementary color */
+        font-style: normal; /* Remove italic for better readability */
+        font-weight: 500; /* Slightly bolder */
+        font-size: 1.15em;
+        margin-top: 10px;
         }
         
         ul {
