--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <title>Al-E-Iba Dahri</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        .site-footer {
+            text-align: center;           /* Center the text */
+            padding: 15px 20px;           /* Add some space around the text */
+            background-color: #002147;    /* Dark Oxford Blue, matches your header/nav theme */
+            color: #ffffff;               /* White text */
+            border-top: 2px solid #0056b3; /* Optional: subtle top border for separation */
+            font-size: 0.9em;             /* Slightly smaller font */
+            margin-top: 40px;             /* Space above footer */
+            border-radius: 0 0 8px 8px;   /* Rounded bottom corners (optional) */
+        }
         body {
             font-family: "Helvetica Neue", Arial, sans-serif;
             max-width: 800px;
@@ -95,5 +105,8 @@
         <!-- <p>GitHub: <a href="https://github.com/aleibaad">github.com/aleibad</a></p> -->
         <p>LinkedIn: <a href="https://linkedin.com/in/adahri">linkedin.com/in/adahri</a></p>
     </section>
+    <footer class="site-footer">
+        <p>© Copyright 2025 - All Rights Reserved</p>
+    </footer>
 </body>
 </html>
