--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                     <img src="profile.jpg" alt="Al-E-Iba Dahri">
                 </div>
                 <div class="about-text">
+                    <h2>About</h2>
                     <p>Development economics professional specializing in quantitative analysis and data-driven policy work across climate, education, health, and gender issues.</p>
                 </div>
             </div>
