Update dissertation abstract

--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@
             <div class="research-entry">
                 <div class="research-program">MSc Economics for Development, Oxford</div>
                 <div class="research-dissertation">Dissertation: Climate Shocks, Repeated Exposure and Adaptation: Evidence from Ethiopia</div>
+           <!-- Add abstract PDF link -->
+            <a href="abstract.pdf" target="_blank" style="margin-left: 10px; font-weight: 400; font-style: normal; color: #1a73e8; text-decoration: underline;">[Abstract]</a>
+ 
             </div>
         </section>
         
